From Demo To MyDev/sample/retrieveSource/objects/PartnerIndex__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Партнер</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Показатели</relationshipLabel>
        <relationshipName>AccountIndexes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AverageInvoiceFact__c</fullName>
        <label>Средний чек (факт)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AverageInvoicePlan__c</fullName>
        <label>Средний чек (план)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessTripsNumberFact__c</fullName>
        <label>Кол-во командировок (факт)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessTripsNumberPlan__c</fullName>
        <label>Кол-во командировок (план)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndexDate__c</fullName>
        <label>Период показателя</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndexShortDate__c</fullName>
        <formula>CASE(MONTH(IndexDate__c), 
  1, &quot;01.&quot;, 
  2, &quot;02.&quot;,
  3, &quot;03.&quot;,
  4, &quot;04.&quot;,
  5, &quot;05.&quot;,
  6, &quot;06.&quot;,
  7, &quot;07.&quot;,
  8, &quot;08.&quot;,
  9, &quot;09.&quot;,
  10, &quot;10.&quot;,
  11, &quot;11.&quot;,
  12, &quot;12.&quot;,
  &quot;&quot;) +  TEXT(YEAR(IndexDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Период показателя</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexShortYearDate__c</fullName>
        <formula>TEXT(YEAR(IndexDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Период показателя год</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Name__c</fullName>
        <displayFormat>KPI-{0000000}</displayFormat>
        <label>KPI Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OfficesActivatedThisPeriodFact__c</fullName>
        <label>Активировано офисов (факт)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfficesActivatedThisPeriodPlan__c</fullName>
        <label>Активировано офисов (план)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Account__r.Owner.FirstName + &quot; &quot; + Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ответственный (TSDM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentSalesVolumeFact__c</fullName>
        <formula>PeriodSalesVolumeFact__c / PeriodSalesVolumePlan__c</formula>
        <label>% выполнения объема продаж НСЖ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentSalesVolumeInvestFact__c</fullName>
        <formula>PeriodSalesVolumeInvestFact__c/PeriodSalesVolumeInvestPlan__c</formula>
        <label>% выполнения объема продаж ИСЖ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PeriodSalesVolumeFact__c</fullName>
        <label>Объём продаж НСЖ (факт)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PeriodSalesVolumeInvestFact__c</fullName>
        <label>Объём продаж ИСЖ (факт)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PeriodSalesVolumeInvestPlan__c</fullName>
        <label>Объём продаж ИСЖ (план)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PeriodSalesVolumePlan__c</fullName>
        <label>Объём продаж НСЖ (план)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PoliciesSoldFact__c</fullName>
        <label>Продано полисов (факт)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PoliciesSoldPlan__c</fullName>
        <label>Продать полисов (план)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <label>Продуктивность специалистов отделений</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quartal__c</fullName>
        <label>Квартал</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2019 Q1</fullName>
                </value>
                <value>
                    <fullName>2019 Q2</fullName>
                </value>
                <value>
                    <fullName>2019 Q3</fullName>
                </value>
                <value>
                    <fullName>2019 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Причина</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Сотрудник</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KPII</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitsNumberFact__c</fullName>
        <label>Кол-во встреч (факт)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitsNumberPlan__c</fullName>
        <label>Кол-во встреч (план)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YYYY_MM__c</fullName>
        <formula>TEXT(YEAR(IndexDate__c))+&quot;.&quot;+ CASE(MONTH(IndexDate__c), 
1, &quot;01&quot;, 
2, &quot;02&quot;, 
3, &quot;03&quot;, 
4, &quot;04&quot;, 
5, &quot;05&quot;, 
6, &quot;06&quot;, 
7, &quot;07&quot;, 
8, &quot;08&quot;, 
9, &quot;09&quot;, 
10, &quot;10&quot;, 
11, &quot;11&quot;, 
12, &quot;12&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Период показателя YYYY.MM</label>
        <type>Text</type>
    </fields>
    <label>Показатель</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PercentSalesVolumeInvestFact__c</columns>
        <columns>PercentSalesVolumeFact__c</columns>
        <columns>Productivity__c</columns>
        <columns>PoliciesSoldFact__c</columns>
        <columns>IndexShortYearDate__c</columns>
        <columns>YYYY_MM__c</columns>
        <columns>Account__c</columns>
        <columns>BusinessTripsNumberFact__c</columns>
        <columns>PeriodSalesVolumeInvestPlan__c</columns>
        <columns>PeriodSalesVolumeInvestFact__c</columns>
        <columns>PeriodSalesVolumePlan__c</columns>
        <columns>PeriodSalesVolumeFact__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000}</displayFormat>
        <label>Код</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Показатели</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>